# Deepstream-sample-app-1

./: CMakeLists.txt  README.md  deepstream.cfg  main.cpp
